data/derived/fa15/progs/unify/prog3538.ml.out
Characters 356-359:
  | Power(a, b) -> if(-1.0 < x < 1.0 && x > -1.0 && y < 1.0 && y > -1.0) then x *. y else eval(a, x, y) ** eval(b, x, y);;
                                 ^^^
Error: This expression has type float but an expression was expected of type
         bool
